<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
        <string name="main_settings_title">Armory</string>
        <string name="buttons_settings_title">Buttons</string>
        <string name="lights_settings_title">Lights</string>
        <string name="armory_lockscreen_settings_title">Lock Screen</string>
        <string name="misc_settings_title">Miscellaneous</string>
        <string name="navigationbar_settings_title">Navigation Bar</string>
        <string name="qs_settings_title">Quick Settings</string>
        <string name="recents_settings_title">Recents</string>
        <string name="statusbar_settings_title">Status Bar</string>
	<string name="lockscreen_shortcuts_title">Lock Screen Shortcuts</string>
	<string name="navbar_tuner_title">Navigation Bar Tuner</string>
	<string name="statusbar_icons_title">Status Bar Icons</string>
	<string name="statusbar_dt2s_title">Double Tap To Sleep</string>
	<string name="statusbar_dt2s_summary">Double tap on the status bar to sleep</string>
	<string name="keyguard_torch_title">Lock Screen Torch</string>
	<string name="keyguard_torch_summary">Press and hold the power button on the lock screen to toggle the flashlight</string>
	<string name="dt2s_lockscreen_title">Double Tap To Sleep</string>
	<string name="dt2s_lockscreen_summary">Double tap on the lock screen to sleep</string>
    <string name="theme_category_title">System theme</string>
    <string name="systemui_theme_style_title">Background color</string>
    <string name="systemui_theme_style_auto">Automatic (wallpaper based)</string>
    <string name="systemui_theme_style_light">Light</string>
    <string name="systemui_theme_style_dark">Dark</string>
    <string name="applying_theme_toast">Applying theme, please wait...</string>
    <string name="theme_applied_toast">Theme applied!</string>
    <string name="substratum_installed_title">System themes are unavailable because Substratum is installed. Uninstall it if you wish to use these themes instead.</string>
    <string name="accent_picker_dialog_title">Select an accent color</string>
    <string name="theme_accent_picker_title">Accent color</string>
    <string name="theme_accent_picker_summary">Select system theme accent color</string>
    <string name="theme_accent_picker_default">Default</string>
	<string name="swap_volume_buttons_title">Swap Volume Buttons</string>
	<string name="swap_volume_buttons_summary">Swap volume buttons while rotated</string>
	<string name="volume_media_title">Contol Media Volume</string>
	<string name="volume_media_summary">Default to controlling media volume with buttons</string>
        <string name="device_extras_title">Device extras</string>
	<string name="device_extras_summary">Device specific settings</string>
        <string name="device_extras_target_package">com.invictrix.settings.device</string>
        <string name="device_extras_target_class">com.invictrix.settings.device.TouchscreenGestureSettings</string>
	<string name="music_control_title">Music Control</string>
	<string name="music_control_summary">When the screen is off, long press the volume buttons to skip music tracks</string>
	<string name="headset_title">Launch music player when</string>
	<string-array name="headset_names">
		<item>Never</item>
		<item>Connected to wired headset</item>
		<item>Connected to bluetooth but not Android Auto</item>
		<item>Connected to bluetooth</item>
		<item>Connected to anything but Android Auto</item>
		<item>Connected to anything</item>
	</string-array>
	<string-array name="headset_values">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
	</string-array>
	<string name="lockscreen_media_title">Lock Screen Media</string>
	<string name="lockscreen_media_summary">Show media info on the lockscreen</string>
	<string name="statusbar_quick_pulldown_title">Quick Pulldown</string>
	<string name="statusbar_quick_pulldown_summary">Pull down on the right side of the status bar to expand fully</string>
	<string name="qs_footer_warnings_title">QS Panel Warnings</string>
	<string name="qs_footer_warnings_summary">Hide QS Panel warnings such as VPN</string>
	<string name="less_boring_heads_up_title">Limit Heads Up Notifications</string>
	<string name="less_boring_heads_up_summary">Only show heads up notifications for calls and texts</string>
	<string name="network_traffic_state_title">Network Traffic</string>
	<string name="network_traffic_state_summary">Show network traffic in the status bar</string>
	<string name="network_traffic_autohide_threshold_title">Auto Hide Traffic Icon Threshold</string>
	<string name="heads_up_notifications_enabled_title">Heads Up Notifications</string>
    <string name="bottom_nav_navigation_title">Navigation</string>
    <string name="navbar_interface_title">Interface</string>
    <string name="navbar_size">Bar size</string>
    <string name="navbar_mode">Navigation mode</string>
    <string name="navbar_mode_summary">Select which navigation mode to use on your device</string>
    <string name="navbar_visibility">Allow navigation bar</string>
    <string name="navigationbar_settings_summary">Customize navigation style and behavior</string>
    <string name="navbar_general_title">Advanced</string>
    <string name="navigation_bar_left_title">Left-handed mode</string>
    <string name="navigation_bar_left_summary">Place the navigation bar on the left side of the screen in landscape mode</string>
    <string name="smartbar_interface">SmartBar</string>
    <string name="icon_pack_picker_dialog_title">Icon packs</string>
    <string name="image_exceeds_max_allowed_size">Image must not exceed 512x512</string>
    <string name="invalid_icon_from_uri">Unable to load image from content provider</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_app_title">Select custom app</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="profile_applist_title">Applications</string>
    <string name="default_string">Stock</string>
    <string name="default_settings">Stock settings</string>
    <string name="default_settings_summary">Stock AOSP navigation bar</string>
    <string name="choose_action_title">Choose action</string>
    <string name="action_entry_default_action">Default settings</string>
    <string name="action_entry_select_app">Select application</string>
    <string name="action_entry_custom_action">Select custom action</string>
    <string name="action_value_default_action" translatable="false">default</string>
    <string name="action_value_select_app" translatable="false">app</string>
    <string name="action_value_custom_action" translatable="false">custom</string>
    <string name="action_value_back" translatable="false">task_back</string>
    <string name="action_value_home" translatable="false">task_home</string>
    <string name="action_value_search_assist" translatable="false">task_assist</string>
    <string name="action_value_recent_apps" translatable="false">task_recents</string>
    <string name="action_value_voice_search" translatable="false">task_voice_search</string>
    <string name="action_value_menu" translatable="false">task_menu</string>
    <string name="fling_settings">Fling settings</string>
    <string name="fling_settings_summary">A very unique and fully-customizable gesture-based navigation bar</string>
    <string name="fling_interface">Fling</string>
    <string name="fling_enable_title">Enable Fling</string>
    <string name="fling_back_home_policy">Back and Home are required to be set at all times. To change a Back or Home assignment, set the desired assignment first.\n\nAlso, setting a double tap action will delay single tap a bit.</string>
    <string name="fling_split_bar_policy">When only a right or left action is assigned, the action applies to the full bar.</string>
    <string name="fling_def_summary">No action set</string>
    <string name="fling_swipe_actions">Swipe gestures</string>
    <string name="fling_tap_actions">Tap gestures</string>
    <string name="fling_short_swipe_right">Right short swipe</string>
    <string name="fling_short_swipe_left">Left short swipe</string>
    <string name="fling_long_swipe_right">Right long swipe</string>
    <string name="fling_long_swipe_left">Left long swipe</string>
    <string name="fling_right_up_swipe">Right side swipe up</string>
    <string name="fling_left_up_swipe">Left side swipe up</string>
    <string name="fling_single_tap">Single tap right</string>
    <string name="fling_double_tap">Double tap right</string>
    <string name="fling_long_press">Long press right</string>
    <string name="fling_single_left_tap">Single tap left</string>
    <string name="fling_double_left_tap">Double tap left</string>
    <string name="fling_long_left_press">Long press left</string>
    <string name="long_swipe_portrait_title">Portrait</string>
    <string name="long_swipe_landscape_title">Landscape</string>
    <string name="portrait_right_swipe_title">Portrait right swipe</string>
    <string name="portrait_left_swipe_title">Portrait left swipe</string>
    <string name="landscape_right_swipe_title">Landscape right swipe</string>
    <string name="landscape_left_swipe_title">Landscape left swipe</string>
    <string name="vertical_up_swipe_title">Vertical up swipe</string>
    <string name="expanded_desktop_title">Expanded desktop</string>
    <string name="wake_when_plugged_or_unplugged_title">Wake on plug</string>
    <string name="wake_when_plugged_or_unplugged_summary">Turn the screen on when connecting or disconnecting a power source</string>
    <string name="vibration_on_charge_state_changed_title">Vibrate on plug</string>
    <string name="vibration_on_charge_state_changed_summary">Vibrate when connecting or disconnecting a power source</string>
    <string name="powermenu_title">Power menu</string>
    <string name="powermenu_reboot_title">Reboot</string>
    <string name="powermenu_advanced_reboot_title">Advanced reboot</string>
    <string name="powermenu_advanced_reboot_summary">Enables the advanced reboot menu for rebooting options such hot, recovery and bootloader. Also adds as an option to restart SystemUI</string>
    <string name="powermenu_screenshot_title">Screenshot</string>
    <string name="powermenu_screenrecord_title">Screen Record</string>
    <string name="powermenu_kill_task_title">Kill Task</string>
    <string name="powermenu_lockdown_title">Screen Off</string>
    <string name="powermenu_google_assistant_title">Google Assistant</string>
    <string name="powermenu_settings_title">Settings</string>
    <string name="powermenu_soundpanel_title">Sound Panel</string>
    <string name="powermenu_airplane_title">Airplane mode</string>
    <string name="powermenu_category_visibility">Lockscreen options</string>
    <string name="powermenu_lockscreen_title">Visibility on the lockscreen</string>
    <string name="powermenu_lockscreen_summary">Enable the ability to show and use the power menu dialog while on the lockscreen</string>
    <string name="powermenu_ls_reboot_summary">Show the reboot option on the lockscreen</string>
    <string name="powermenu_ls_advanced_reboot_summary">Show the advanced reboot option on the lockscreen</string>
    <string name="powermenu_ls_screenshot_summary">Show the screenshot option on the lockscreen</string>
    <string name="powermenu_ls_airplane_summary">Show the airplane mode option on the lockscreen</string>
    <string name="powermenu_ls_screen_record_summary">Show the screen record option on the lockscreen</string>
    <string name="powermenu_ls_soundpanel_summary">Show the sound panel option on the lockscreen</string>
    <string name="notification_sound_vib_screen_on_title">Noisy notifications if screen on</string>
    <string name="notification_sound_vib_screen_on_summary">Disable to block notifications sound and vibration when the screen is awake</string>
</resources>