<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2018 Invictrix ROM

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

	<ListPreference 
		android:key="headset_connect_player"
		android:title="@string/headset_title"
		android:entries="@array/headset_names"
		android:entryValues="@array/headset_values"/>

	<com.android.settings.preferences.GlobalSettingSwitchPreference
		android:key="heads_up_notifications_enabled"
		android:title="@string/heads_up_notifications_enabled_title"
		android:defaultValue="false" />

        <com.android.settings.preferences.GlobalSettingSwitchPreference
                android:key="notification_sound_vib_screen_on"
                android:title="@string/notification_sound_vib_screen_on_title"
                android:summary="@string/notification_sound_vib_screen_on_summary"
                android:defaultValue="true" />

	<com.android.settings.preferences.SystemSettingSwitchPreference
		android:key="less_boring_heads_up"
		android:title="@string/less_boring_heads_up_title"
		android:summary="@string/less_boring_heads_up_summary"
		android:defaultValue="false" />

	<PreferenceScreen
                android:key="expanded_desktop_category"
                android:title="@string/expanded_desktop_title"
                android:fragment="com.armory.settings.ui.ExpandedDesktop"/>

    <com.android.settings.preferences.SystemSettingSwitchPreference
        android:key="wake_when_plugged_or_unplugged"
        android:title="@string/wake_when_plugged_or_unplugged_title"
        android:summary="@string/wake_when_plugged_or_unplugged_summary"
        android:defaultValue="false" />

    <com.android.settings.preferences.SystemSettingSwitchPreference
        android:key="vibration_on_charge_state_changed"
        android:title="@string/vibration_on_charge_state_changed_title"
        android:summary="@string/vibration_on_charge_state_changed_summary"
        android:defaultValue="true" />

    <PreferenceScreen
        android:key="power_menu"
        android:title="@string/powermenu_title"
        android:fragment="com.armory.settings.ui.PowerMenu"/>
</PreferenceScreen>
